# math_core

./: CMakeLists.txt  README.md
cmakemodules/: BuildFlags.cmake  FindOMP.cmake  boost_test.cmake  output_paths.cmake  set_target_project.cmake  test_std_config.h.in
include/algebra/vector/: common_vector.h  dense_vector.h  math_vector.h  sparse_vector.h
src/: CMakeLists.txt
src/algebra/: CMakeLists.txt
src/algebra/vector/: CMakeLists.txt
src/algebra/vector/test/: CMakeLists.txt  main.cpp  test_smart_vector.cpp
